# cpp_webassembly_template

./: .gitignore  .prettierignore  README.md  agents.md  eslint.config.js  package-lock.json  package.json  sample.vscode.c_cpp_properties.json
native/: .clang-tidy  CMakeLists.txt  build.bat  build.sh  build_wasm.bat  build_wasm.sh  lsan_suppressions.txt  package.json
native/libs/NlpLib/: CMakeLists.txt
native/libs/NlpLib/src/: CMakeLists.txt  Point.cpp  Point.embind.cpp  Point.embind.hpp  Point.hpp  Tokenizer.cpp  Tokenizer.embind.cpp  Tokenizer.embind.hpp  Tokenizer.hpp  log.hpp
native/libs/NlpLib/tests/: CMakeLists.txt  TokenizerTests.cpp
native/scripts/: select-build.js
native/src/: wasm_main.cpp
